# telog

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  release.yml
assets/scripts/: telog.service
docs/: chat_id.md  config.md  lib.md
scripts/: release-version.sh
src/lib/: logger.rs
src/source/docker/: mod.rs
src/source/filesystem/: mod.rs
src/telegram/: mod.rs
