[package]
name = "telog"
version = "0.1.4"
authors = ["Triet Trinh <contact@trinhminhtriet.com>"]
description = "Aggregate logs from various sources and send real-time notifications to Telegram for easy monitoring."
license = "MIT"
readme = "README.md"
edition = "2018"
categories = ["development-tools"]
keywords = ["logging", "monitoring", "telegram", "notifications", "utility"]
homepage = "https://trinhminhtriet.com"
repository = "https://github.com/trinhminhtriet/telog"

[features]
bin_core = ["clap", "serde_yaml", "teloxide", "tokio", "chrono", "futures", "hostname", "cfg-if"]
ls_counter = []
ls_filesystem = ["notify"]
ls_journald = ["systemd"]
ls_docker = ["bollard"]

[[bin]]
name = "telog"
doc = false
doctest = false
required-features = ["bin_core"]

[lib]
name = "telog"
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["blocking", "json", "socks"] }

# bin
clap = { version = "2.33", optional = true }
serde_yaml = { version = "0.9", optional = true }
teloxide = { version = "0.3", optional = true }
tokio = { version = "0.2", features = ["rt-threaded", "macros", "time", "blocking"], optional = true }
chrono = { version = "0.4", optional = true }
futures = { version = "0.3", optional = true }
hostname = { version = "0.4", optional = true }
cfg-if = { version = "1.0", optional = true }
notify = { version = "7.0", optional = true }
systemd = { version = "0.10", optional = true }
bollard = { version = "0.15", optional = true }

# lib
log = { version = "0.4", features = ["std"] }
serde_json = { version = "1.0" }

[package.metadata.deb]
maintainer-scripts = "assets/scripts/"
systemd-units = { enable = false, start = false }
depends = "$auto"
section = "utility"
conf-files = ["/etc/telog.yaml"]
features = ["bin_core", "ls_counter", "ls_filesystem", "ls_journald", "ls_docker"]
assets = [
  ["target/release/telog", "usr/bin/", "755"],
  ["README.md", "usr/share/doc/telog/README", "644"],
  ["assets/config.yaml", "etc/telog.yaml", "644"]
]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/telog", dest = "/usr/bin/telog", mode = "0755" },
  { source = "assets/config.yaml", dest = "/etc/telog.yaml", config = true, mode = "0644" },
  { source = "assets/scripts/telog.service", dest = "/lib/systemd/system/telog.service", mode = "0644" },
  { source = "LICENSE", dest = "/usr/share/doc/telog/LICENSE", doc = true, mode = "0644" },
  { source = "README.md", dest = "/usr/share/doc/telog/README.md", doc = true, mode = "0644" }
]
